2002-11-02  Tim Coleman (tim@timcoleman.com) 
	* System.Data.SqlClient/SqlCommand.cs:
		Change to use sp_executesql to run regular text queries.
		Now, sp_executesql for text, sp_execute for prepared,
		and execute for SPs means everything runs a procedure.
	* System.Data.SqlClient/SqlParameter.cs:
		Allow client to set parameter name in Prepare ()
	* System.Data.SqlClient/SqlParameterCollection.cs:
		Implement some methods
	* System.Data.SqlClient/SqlDataReader.cs:
		Since everything is an SP now, we know that when
		we see DoneProc, that we are really done.

2002-11-01  Tim Coleman (tim@timcoleman.com) :
	* System.Data.Common/DbEnumerator.cs :
		Throw correct exception on Reset ()
		Add ColumnSize to schema table.
	* System.Data.SqlClient/SqlDataReader.cs :
		Add ColumnSize to schema table.
	* System.Data.SqlClient/SqlCommand.cs :
		Change the way that preparing is handled.
		Now uses sp_prepare on the server instead of temp
		stored procedures because it's the Right Thing[tm] to do.
	* System.Data.SqlClient/SqlConnection.cs :
		Store data readers here rather than in command
	* System.Data.SqlClient/SqlDataReader.cs :
		More implementation, including binary types
	* System.Data.SqlClient/SqlParameter.cs :
		Lowercase type name

2002-10-31  Tim Coleman (tim@timcoleman.com)
        * System.Data.Common/DbDataAdapter.cs :
                Fix handling of nulls
        * System.Data.Common/DbDataRecord.cs :
                Change GetFieldType ()
        * System.Data.Common/DbEnumerator.cs :
                Add new schema information
        * System.Data.Common/FieldNameLookup.cs :
                Change definition of schema
        * System.Data.Common/SchemaInfo.cs :
                Add more information
        * System.Data.SqlClient/SqlDataReader.cs :
                get more schema table data
        * list :
                Add Mono.Data.TdsClient.Internal.TdsSchemaInfo

2002-10-31  Ville Palo <vi64pa@koti.soon.fi>

	* SqlBinary.cs:
	* SqlBoolean.cs: