@@ -1,3 +1,11 @@
+2002-11-03  Tim Coleman (tim@timcoleman.com)
+	* System.Data.SqlClient/SqlCommand.cs:
+		Use SET NO_BROWSETABLE ON when CommandBehavior is KeyInfo
+	* System.Data.SqlClient/SqlDataReader.cs:
+		Get more schema info if available
+	* list:
+		Add Mono.Data.TdsClient.Internal.TdsColumnStatus
+
 2002-11-02  Tim Coleman (tim@timcoleman.com) 
 	* System.Data.SqlClient/SqlCommand.cs:
 		Change to use sp_executesql to run regular text queries.
